--- a/ConfigFiles/client.config.ini
+++ b/ConfigFiles/client.config.ini
@@ -54,7 +54,9 @@ console.apps=edu.uw.cs.cse461.consoleapps.infrastructure.AppManager \
         edu.uw.cs.cse461.consoleapps.WhoAmI \
         edu.uw.cs.cse461.consoleapps.solution.DataXferRaw \
         edu.uw.cs.cse461.consoleapps.solution.DataXferTCPMessageHandler \
+        edu.uw.cs.cse461.consoleapps.solution.DataXferRPC \
         edu.uw.cs.cse461.consoleapps.solution.PingRaw \
+        edu.uw.cs.cse461.consoleapps.solution.PingRPC \
         edu.uw.cs.cse461.consoleapps.solution.PingTCPMessageHandler \
         edu.uw.cs.cse461.consoleapps.grading.TestDriver \
 
@@ -116,6 +118,8 @@ test.driver.console.apps=edu.uw.cs.cse461.consoleapps.grading.PingRawTester \
         edu.uw.cs.cse461.consoleapps.grading.DataXferRawTester \
         edu.uw.cs.cse461.consoleapps.grading.PingTCPMessageHandlerTester \
         edu.uw.cs.cse461.consoleapps.grading.DataXferTCPMessageHandlerTester \
+        edu.uw.cs.cse461.consoleapps.grading.PingRPCTester \
+        edu.uw.cs.cse461.consoleapps.grading.DataXferRPCTester \
          
 test.driver.outputdir=../ConsoleRun/TestResults
  
